# asp

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md  cli.just  codecov.yml  deny.toml  test-logs-34aa6295.jsonl  test-logs-34c0b350.jsonl  test-logs-3af5c662.jsonl  test-logs-79da888d.jsonl  test-logs-a6c68886.jsonl  test-logs-a8c2e26e.jsonl  test-logs-ad04609a.jsonl  test-logs-eb60750e.jsonl  test-output-30b419ec.txt  test-output-34aa6295.txt  test-output-34c0b350.txt  test-output-79da888d.txt  test-output-7c19beb1.txt  test-output-a8c2e26e.txt  test-output-ad04609a.txt  test-output-eb60750e.txt  test-report.txt
.cargo/: config.toml
.config/: nextest.toml
.github/: dependabot.yml
.sqlx/: query-0027029b8465406822a1c0e83ceca4bfe5200064c783ed457ad5b09c068e91ec.json  query-0538af99e504a2a55b232b7c0689d075f72530bfecdc97798e6e68567c649c8e.json  query-05a4708a1bfee416a4253f0fb178afa9f367ab61dc099b4a555961bfb436693b.json  query-080436ba2f76ec8af1545f3e609aeca08be2c2dc4d9f4050c442a55d7e2104e0.json  query-0841dd6aa294a9bcb2a75331c79a74108073fc08feea7c6b7577a3040da2757a.json  query-096c7357477f3019ca937b1cd2f8ccb03a58908cf8933279b3f3560654841f77.json  query-0d6d8355227b0eb2891423adb21f2f6124d51edac01a8297aaa358d4dde889d7.json  query-10c0b7b8769286b298a876ffe28cc987adb4dfc4dc88506e88376352a60b2900.json  query-16d05e41361671340d2172e92f43cb599f97020d9554f5cde3a18b4e2f7bf50d.json  query-16f31de21757f3320b4053fac47a8841e12ef165741889101b73dfc65c6b1c75.json  query-185a38f8c72d41dd2181f1569cdd4ff687dc683188eee443805d74933109243c.json  query-1a0a71e4cad7eac6105adaf883692e14110349025134ff01281767a1c1c048a2.json  query-22f28997d3db116d0f2f2c454ea6864f47e39cbee43dd13bcc7a119301f12e2f.json  query-23635d55805fa09c6afcb23b97e3956fc83d8ed7bf8d7fe7d24e5c8a68cab2d5.json  query-2692f895dadd8588382d567c91ebf8613ea9f06be6774a24ca58e9da8acd9d93.json  query-2707b8c3727094ed84df907340c32cd8dac1d7f9d9894d876865bb5edc3d7b99.json  query-27f7d52735b385e2fa60cc64fd033c8e14931ca650ce1205fcbfe3d7f7a87b75.json  query-30ad75ccf871d65b5b49b434453bf780ebb9ff11b8545f4d689b80b01fd80a08.json  query-328fd9d56e5455974a0eef689e37721e3b64be4dca787c46fe99d003db83dcdc.json  query-36b449a45a4f869cf3707df02342d46cfe3f35f07143a89670764a125088561c.json  query-3b68cf727783d272f69a828ae4fe5335a898103706b7ada5ee58638341f2c8f0.json  query-41474da228920967095aca449f8dbffcd3445235589aedca9089e17d69d8e5b6.json  query-42cce7e601b4cdbae67a16614f476cadcc38fcc0f2aaa4e5970d138e3142e0ad.json  query-465e3cd5d0f36ac6b45521bce5bd031f3ae3d1563b291b9109c387216d6829ba.json  query-590ee2a4aabe2d1c8bbbf39b88eebd0b84819bc5950d19ec564aad0cb4ca144c.json  query-5a2d91a1a60f8a4171c6c91747044e3f1e085eaf9dad4e2ef1c5dc7f817d4293.json  query-5b482a266a5293666f6804eb897bfc6b830ccd9da13a675c03a104416bffbcb9.json  query-5c264a361abe59e484126b6bf0e62574b2f70e226d28d6b165aea99af2299989.json  query-5d74b1d1ff28fe4f6110a7979d79d94a0897c6f1e7c2e2cd3edc6aeffb3029ff.json  query-62f27324d9796fd43cf298ed8c22a355347c203c39484bf4e6d22e0668b05978.json  query-6ec19fcd04e75236806641328a85e7a497461150fb47bcc4c1eed4e73abcd1fc.json  query-74db99a465b5697135f5d5393c66db34c88724c2e37c269f0a5eec443c51e5ab.json  query-75262e335563b71f2ce8b3e58cd267b53b7e30647c187305613200c59a3cf117.json  query-77fd2f82958ba71b78ee0ad6153fe52e72e4dde592e2e13f0124b28c59595a98.json  query-7e8d8591f9b58c840aac24f2cbc3ef29b1f70fef9acaf8cdf8997549bd72eeab.json  query-877cfe43689ab2dd0e5e78b48e3b2814802ad20b8e63eb7dd75e318b04312c74.json  query-91099707803147e0005ec19903a56c9e9d928a0fa2601e0bdf364aa6794ba3f9.json  query-93c9f0482871c7c0e36f97efca66e7e87048e53d949d878d1e4dd4091c5ed09d.json  query-9a22cf6a078c5a2072161727e0b0079393bdcc66b0ff908ddf1d9168dc6e79c7.json  query-9af872c19011c0838fc4d799ace2c37c698781844ef786cc5c99fa794bed08b3.json  (+31 more)
cli/platform-cli/: Cargo.toml
cli/platform-cli/src/: client.rs  commands.rs  config.rs  main.rs  stream.rs
crates/bins/platform-k8s-watcher/: Cargo.toml
crates/bins/platform-k8s-watcher/src/: config.rs  lib.rs  main.rs  otlp.rs  watcher.rs
crates/libs/platform-k8s/: Cargo.toml
crates/libs/platform-k8s/tests/: k8s_namespace_integration.rs  namespace_k8s.rs
crates/libs/platform-mesh/: Cargo.toml
crates/libs/platform-mesh/src/: acme.rs  ca.rs  config.rs  error.rs  identity.rs  lib.rs  state.rs  sync.rs
crates/libs/platform-notify/: Cargo.toml
crates/libs/platform-notify/src/: dispatch.rs  email.rs  lib.rs  state.rs
crates/libs/platform-registry/: Cargo.toml
crates/libs/platform-registry/src/: access.rs  credential_provider.rs  digest.rs  error.rs  gc.rs  lib.rs  pull_secret.rs  seed.rs  state.rs  types.rs
crates/libs/platform-registry/tests/: registry_crate_integration.rs
crates/libs/platform-secrets/: Cargo.toml
crates/libs/platform-secrets/src/: lib.rs  llm_providers.rs
crates/libs/platform-secrets/tests/: secrets_crate_integration.rs
crates/libs/platform-webhook/: Cargo.toml
crates/libs/platform-webhook/src/: dispatch.rs  lib.rs  signing.rs  ssrf.rs
crates/platform-git/: Cargo.toml
crates/platform-git/src/: error.rs  lib.rs  types.rs
docker/: Dockerfile  Dockerfile.claude-runner  Dockerfile.dev-pod  Dockerfile.platform-proxy  Dockerfile.platform-proxy-init  Dockerfile.platform-runner  Dockerfile.platform-runner-bare  entrypoint.sh  platform-build-status.sh
docs/: architecture.md  cicd-process-spec.md  fe-be-testing.md  feature-inventory.md  testing.md
hack/: build-agent-images.sh  build-proxy.sh  capture-claude-setup-token.sh  cli-test-pubsub.sh  cluster-up.sh  debug-claude-auth.sh  debug-claude-validate.sh  deploy-services.sh  detect-worktree.sh  dev-env.sh  dev-up.sh  generate-test-report.sh  kind-config.yaml  kind-up.sh  run-llm-e2e.sh  test-cli-incluster.sh  test-e2e-llm.sh  test-in-cluster.sh
mcp/: package-lock.json  package.json
migrations/: 00000000000001_v0_1_0.down.sql  00000000000001_v0_1_0.up.sql  20260223010001_user_provider_keys.down.sql  20260223010001_user_provider_keys.up.sql  20260223020001_workspaces.up.sql  (+33 more)
src/: audit.rs  (+6 more)
(+699 files in other folders)
