[package]
name = "platform-cli"
version = "0.1.0"
edition = "2021"
description = "Remote CLI client for the AgentSphere platform"

[[bin]]
name = "platform-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
colored = "3"
dirs = "6"
url = "2"
anyhow = "1"

[lints.rust]
unsafe_code = "forbid"
