[package]
name = "platform-git"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"
description = "Git operations library for the platform"

[dependencies]
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tokio = { version = "1", features = ["process", "fs", "sync", "time", "io-util"] }
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "ecdsa"] }
pgp = "~0.15"
hex = "0.4"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
