[package]
name = "platform-k8s-watcher"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"

[lib]
name = "platform_k8s_watcher"
path = "src/lib.rs"

[[bin]]
name = "platform-k8s-watcher"
path = "src/main.rs"

[dependencies]
platform-observe = { path = "../../libs/platform-observe" }

# HTTP
axum = { version = "0.8", default-features = false, features = ["tokio", "http1"] }

# Kubernetes
kube = { version = "3", features = ["runtime", "client"] }
k8s-openapi = { version = "0.27", features = ["v1_32"] }

# HTTP client (OTLP export)
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }

# Serialization
serde_json = "1"

# Protobuf
prost = "0.14"

# Chrono
chrono = { version = "0.4", features = ["serde"] }

# Tracing / logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI / config
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"

# Error handling
anyhow = "1"

# TLS crypto provider
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
