[package]
name = "platform-k8s"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"

[dependencies]
# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Kubernetes
kube = { version = "3", default-features = false, features = ["client"] }
k8s-openapi = { version = "0.27", features = ["v1_32"] }

# Tracing
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
uuid = { version = "1", features = ["v4"] }
k8s-openapi = { version = "0.27", features = ["v1_32"] }
kube = { version = "3", default-features = false, features = ["client", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
