[package]
name = "platform-mesh"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"

[dependencies]
# Workspace crates
platform-types = { path = "../../foundation/platform-types" }
platform-k8s = { path = "../platform-k8s" }
platform-secrets = { path = "../platform-secrets" }

# X.509 certificate generation
rcgen = { version = "0.13", features = ["x509-parser"] }

# ACME HTTP-01 provisioning
instant-acme = "0.7"

# Database (compile-time checked queries — run `just db-prepare` after changes)
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }

# Kubernetes
kube = { version = "3", default-features = false, features = ["client"] }
k8s-openapi = { version = "0.27", features = ["v1_32"] }

# Async runtime
tokio = { version = "1", features = ["rt", "time", "sync"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs + time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"

# Tracing
tracing = "0.1"

[dev-dependencies]
x509-parser = "0.16"
tokio = { version = "1", features = ["rt", "macros", "time"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
