[package]
name = "platform-notify"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"
description = "Notification dispatch (email, in-app, webhook)"

[dependencies]
platform-types = { path = "../../foundation/platform-types", default-features = false }
platform-auth = { path = "../platform-auth" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
fred = { version = "10", features = ["subscriber-client"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
tokio = { version = "1", features = ["sync", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
