[package]
name = "platform-registry"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"

[dependencies]
platform-types = { path = "../../foundation/platform-types" }
platform-auth = { path = "../platform-auth" }
thiserror = "2"
anyhow = "1"
axum = { version = "0.8", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
opendal = { version = "0.55", features = ["services-s3"] }
kube = { version = "3", default-features = false, features = ["client"] }
k8s-openapi = { version = "0.27", features = ["v1_32"] }
fred = { version = "10", features = ["subscriber-client"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
tar = "0.4"
flate2 = "1"
fs2 = "0.4"
tracing = "0.1"
tokio = { version = "1", features = ["rt", "macros", "time"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
opendal = { version = "0.55", features = ["services-s3", "services-memory"] }
chrono = "0.4"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
