[package]
name = "platform-secrets"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"

[features]
default = []
ts = ["dep:ts-rs"]

[dependencies]
# Encryption
aes-gcm = "0.10"
rand = "0.10"
sha2 = "0.10"
hex = "0.4"

# Error handling
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
] }

# UUID + chrono
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Tracing
tracing = "0.1"

# TypeScript type generation (optional)
ts-rs = { version = "12", optional = true, features = ["chrono-impl", "uuid-impl", "serde-compat", "serde-json-impl"] }

# Workspace sibling: trait definitions
platform-types = { path = "../../foundation/platform-types" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
