[package]
name = "platform-webhook"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"
description = "Webhook dispatch with HMAC signing and SSRF protection"

[dependencies]
platform-types = { path = "../../foundation/platform-types", default-features = false }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["sync", "rt"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
anyhow = "1"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
